tests/snapshot/error/source_locations/expression/super_call/check_super_already_called.js
class B {}

class C extends B {
  constructor() {
    super();
    super();
  }
}

new C();